Update SupportPanelIntegrationTests.java